--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hbs-classes",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "src/index.js",
   "scripts": {
@@ -16,10 +16,11 @@
     "url": "https://github.com/khanhpv0305/hbs-classes/issues"
   },
   "dependencies": {
+    "@emotion/core": "^10.0.28",
+    "@emotion/stylis": "^0.8.5",
     "lodash-es": "^4.17.15",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0",
-    "stylis": "^3.5.4"
+    "react-dom": "^16.13.0"
   },
   "homepage": "https://github.com/khanhpv0305/hbs-classes#readme"
 }
